k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agrosolutions-ingestion
  labels:
    app: agrosolutions-ingestion
    environment: production
